@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.13 2011/03/05 18:49:13 rlk Exp $
+## $Id: Makefile.am,v 1.14 2013/06/23 01:31:39 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -65,6 +65,7 @@ pkgxmldata_DATA =				\
 	pro_ultrachrome_k3v4.xml		\
 	standard.xml				\
 	standard_gen0.xml			\
+	sx445.xml				\
 	ultrachrome.xml				\
 	wf40.xml				\
 	wf500.xml				\
